--- a/app.json
+++ b/app.json
@@ -13,6 +13,7 @@
   "usingComponents": {
     "l-grid": "/miniprogram_npm/lin-ui/grid/index",
     "l-grid-item": "/miniprogram_npm/lin-ui/grid-item/index",
-    "l-price": "/miniprogram_npm/lin-ui/price/index"
+    "l-price": "/miniprogram_npm/lin-ui/price/index",
+    "l-loadmore": "/miniprogram_npm/lin-ui/loadmore/index"
   }
 }
