--- a/app.json
+++ b/app.json
@@ -15,6 +15,7 @@
     "l-grid": "/miniprogram_npm/lin-ui/grid/index",
     "l-grid-item": "/miniprogram_npm/lin-ui/grid-item/index",
     "l-price": "/miniprogram_npm/lin-ui/price/index",
-    "l-loadmore": "/miniprogram_npm/lin-ui/loadmore/index"
+    "l-loadmore": "/miniprogram_npm/lin-ui/loadmore/index",
+    "my-counter": "/compoents/counter/counter"
   }
 }
