--- a/app.json
+++ b/app.json
@@ -16,6 +16,7 @@
     "l-grid-item": "/miniprogram_npm/lin-ui/grid-item/index",
     "l-price": "/miniprogram_npm/lin-ui/price/index",
     "l-loadmore": "/miniprogram_npm/lin-ui/loadmore/index",
-    "my-counter": "/compoents/counter/counter"
+    "my-counter": "/compoents/counter/counter",
+    "l-icon": "/miniprogram_npm/lin-ui/icon/index"
   }
 }
