--- a/app.json
+++ b/app.json
@@ -17,6 +17,8 @@
     "l-price": "/miniprogram_npm/lin-ui/price/index",
     "l-loadmore": "/miniprogram_npm/lin-ui/loadmore/index",
     "my-counter": "/compoents/counter/counter",
-    "l-icon": "/miniprogram_npm/lin-ui/icon/index"
+    "l-icon": "/miniprogram_npm/lin-ui/icon/index",
+    "l-badge": "/miniprogram_npm/lin-ui/badge/index",
+    "l-popup": "/miniprogram_npm/lin-ui/popup/index"
   }
 }
