--- a/app.json
+++ b/app.json
@@ -1,16 +1,50 @@
 {
   "pages": [
     "pages/home/home",
-    "pages/detail/detail"
+    "pages/detail/detail",
+    "pages/cart/cart",
+    "pages/category/category",
+    "pages/my/my"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "淘腊鸡",
     "navigationBarTextStyle": "black"
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json",
+  "tabBar": {
+    "borderStyle":"white",
+    "color":"#333333",
+    "selectedColor":"#333333",
+    "list": [
+      {
+        "text": "首页",
+        "pagePath": "pages/home/home",
+        "iconPath": "image/tabbar/home@dis.png",
+        "selectedIconPath": "image/tabbar/home.png"
+      },
+      {
+        "text": "分类",
+        "pagePath": "pages/category/category",
+        "iconPath": "image/tabbar/category@dis.png",
+        "selectedIconPath": "image/tabbar/category.png"
+      },
+      {
+        "text": "购物车",
+        "pagePath": "pages/cart/cart",
+        "iconPath": "image/tabbar/cart@dis.png",
+        "selectedIconPath": "image/tabbar/cart.png"
+      },
+      {
+        "text": "我的",
+        "pagePath": "pages/my/my",
+        "iconPath": "image/tabbar/my@dis.png",
+        "selectedIconPath": "image/tabbar/my.png"
+      }
+    ]
+  },
   "usingComponents": {
     "l-grid": "/miniprogram_npm/lin-ui/grid/index",
     "l-grid-item": "/miniprogram_npm/lin-ui/grid-item/index",
