--- a/app.json
+++ b/app.json
@@ -4,7 +4,8 @@
     "pages/detail/detail",
     "pages/cart/cart",
     "pages/category/category",
-    "pages/my/my"
+    "pages/my/my",
+    "pages/search/search"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -15,9 +16,9 @@
   "style": "v2",
   "sitemapLocation": "sitemap.json",
   "tabBar": {
-    "borderStyle":"white",
-    "color":"#333333",
-    "selectedColor":"#333333",
+    "borderStyle": "white",
+    "color": "#333333",
+    "selectedColor": "#333333",
     "list": [
       {
         "text": "首页",
@@ -55,6 +56,8 @@
     "l-badge": "/miniprogram_npm/lin-ui/badge/index",
     "l-popup": "/miniprogram_npm/lin-ui/popup/index",
     "l-tag": "/miniprogram_npm/lin-ui/tag/index",
-    "l-button": "/miniprogram_npm/lin-ui/button/index"
+    "l-button": "/miniprogram_npm/lin-ui/button/index",
+    "l-segment": "/miniprogram_npm/lin-ui/segment/index",
+    "l-segment-item": "/miniprogram_npm/lin-ui/segment-item/index"
   }
 }
