--- a/project.config.json
+++ b/project.config.json
@@ -71,6 +71,12 @@
 					"pathName": "pages/detail/detail",
 					"query": "pid=11",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/category/category",
+					"pathName": "pages/category/category",
+					"scene": null
 				}
 			]
 		}
