--- a/app.json
+++ b/app.json
@@ -58,6 +58,7 @@
     "l-tag": "/miniprogram_npm/lin-ui/tag/index",
     "l-button": "/miniprogram_npm/lin-ui/button/index",
     "l-segment": "/miniprogram_npm/lin-ui/segment/index",
-    "l-segment-item": "/miniprogram_npm/lin-ui/segment-item/index"
+    "l-segment-item": "/miniprogram_npm/lin-ui/segment-item/index",
+    "l-search-bar": "/miniprogram_npm/lin-ui/search-bar/index"
   }
 }
