--- a/app.json
+++ b/app.json
@@ -60,6 +60,7 @@
     "l-button": "/miniprogram_npm/lin-ui/button/index",
     "l-segment": "/miniprogram_npm/lin-ui/segment/index",
     "l-segment-item": "/miniprogram_npm/lin-ui/segment-item/index",
-    "l-search-bar": "/miniprogram_npm/lin-ui/search-bar/index"
+    "l-search-bar": "/miniprogram_npm/lin-ui/search-bar/index",
+    "l-loading": "/miniprogram_npm/lin-ui/loading/index"
   }
 }
